* Improve bulk permissions editing accuracy for data points
* Fix database upgrade 21 to not fail when deleting a duplicate user that has foreign key entries in linked tables.  IMPORTANT: if you have duplicate users with the same username the user created most recently will be deleted.
* Improve performance of the overrides system

*Version 3.4.4*
* More HTML escapes
* Fixed insidious typo released in 3.4.3

*Version 3.4.3*
* Changed i18n modules page links to the appropriate modules page
* Fix bug in ON_CHANGE_INTERVAL logging, prevent errant logging tasks at point termination
* Add configuration for CSP (Content Security Policy) to env.properties
* Fix to use lower case username when interacting with the user cache
* Escape HTML in various places on legacy UI to protect against script injection
* Implement configurable rate limiting for the REST API and rate limit authentication attempts
* Update xstyle - Fixes "Uncaught ReferenceError: normal is not defined" in legacy UI

*Version 3.4.2*
* Setting encryption/security provider at Startup instead of if/when needed during runtime
* Fix legacy bulk permissions page to have a limit of 1000000 if no filters are provided.
* Email handler scripts can cancel the email by doing "return CANCEL;" or "return UNCHANGED;"
* Don't set upgrades available monitor to 0 at startup before checking
* Fix bug in removing duplicate users in upgrade 21
* Fix bug in event type permissions not checking admin

*Version 3.4.1*
* Fix unreliable attribute to fire Attribute Changed events even on first (and every other) change of attribute and include the recently changed attributes
* Don't attempt to contact the store if the store.url is not configured.
* All Point Value DAO SQL methods return annotations if they exist
* Fix MySQL syntax for event handler mappings, broke in 3.4.0

*Version 3.4.0*
* Prevent NPEs that had been thrown in several json imports, particularly event detectors and handlers