@@ -8,6 +8,7 @@ import com.serotonin.json.JsonException;
 import com.serotonin.json.JsonReader;
 import com.serotonin.json.JsonWriter;
 import com.serotonin.json.type.JsonNumber;
+import com.serotonin.json.type.JsonString;
 import com.serotonin.json.type.JsonTypeWriter;
 import com.serotonin.json.type.JsonValue;
 
@@ -29,6 +30,8 @@ public class DoubleConverter extends ImmutableClassConverter {
 
     @Override
     public Object jsonRead(JsonReader reader, JsonValue jsonValue, Type type) throws JsonException {
+        if(jsonValue instanceof JsonString)
+            return Double.parseDouble(jsonValue.toString());
         return ((JsonNumber) jsonValue).doubleValue();
     }
 }
